--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ body {
 .div-info {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     background-color: white;
     align-items: center;
-    margin-top: 40px;
+    margin: 10px;
+    padding: 10px;
 }
 
 .div-flex-container {
