--- a/style.css
+++ b/style.css
@@ -7,12 +7,9 @@ body {
 }
 
 .header-nav {
-    /* margin: 10px; */
     padding: 10px;
     background: rgb(2,0,36);
     background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 50%, rgba(0,212,255,1) 92%);
-    /* background-color: #1B2CC1; */
-    /* background-image: url("./img/banner-utn.png"); */
     margin-bottom: 10px;
     display: flex;
     flex-direction: row;
@@ -23,7 +20,6 @@ body {
 
 .nav-logo {
     width: 100px;
-    /* margin-right: 25px; */
 }
 
 .title-nav {
@@ -53,6 +49,7 @@ body {
 
 .div-flex {
     margin: auto;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -123,6 +120,30 @@ body {
 .img-line {
     margin: 10px;
     width: 300px;
+}
+
+.div-flex-container {
+    border-top: 1px solid #ced4da;
+    margin: 10px;
+    padding: 10px;
+}
+
+.err {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.div-err {
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.img-err {
+    width: 100px;
 }
 
 .img-footer{
