--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body {
 
 .div-flex-container {
     border-top: 1px solid #ced4da;
-    margin: 10px;
+    /* margin: 10px; */
     padding: 10px;
 }
 
